#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(nanosoft, 0.1, BUG-REPORT-ADDRESS)
#AC_CONFIG_SRCDIR([parse_url.c])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADER([nanosoft/config.h])
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_TOOL(AR, ar, ar)
AC_CHECK_TOOL(RANLIB, ranlib, ranlib)

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS(windows.h, [WINDOWS=yes])

if test "x$WINDOWS" = "xyes"; then
	TARGET="windows"
else
	TARGET="unix"
fi

echo "target: $TARGET";

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
