#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(nanosoft, 0.1, BUG-REPORT-ADDRESS)
#AC_CONFIG_SRCDIR([parse_url.c])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADER([nanosoft/config.h])

AC_CANONICAL_HOST

NETWORK_LIBS=""

case "$host_os" in
linux)
	AC_DEFINE(UNIX, 1)
	;;
mingw32)
	AC_DEFINE(WINDOWS, 1)
	AC_CHECK_LIB(ws2_32, main, [NETWORK_LIBS="$NETWORK_LIBS -lws2_32"], [AC_MSG_ERROR([ws2_32 library not found])])
	;;
esac

AC_SUBST(NETWORK_LIBS)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_TOOL(AR, ar, ar)
AC_CHECK_TOOL(RANLIB, ranlib, ranlib)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
